[gd_scene load_steps=6 format=3 uid="uid://c4a8csinqmloe"]

[ext_resource type="Script" uid="uid://c7yvi4i1ldc7r" path="res://Managers/motherbrain.gd" id="1_7r22n"]
[ext_resource type="Texture2D" uid="uid://dfsr2g2lw5wcn" path="res://assets/Piranha_01.png" id="1_c1e6u"]
[ext_resource type="Script" uid="uid://du5mnklxye676" path="res://Managers/arrow_sensor_mother.gd" id="3_7e1w7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1e6u"]
size = Vector2(409, 331)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7r22n"]
size = Vector2(418, 327)

[node name="Motherbrain" type="Node2D"]
script = ExtResource("1_7r22n")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(15, 15)
texture = ExtResource("1_c1e6u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8.5, -8.5)
shape = SubResource("RectangleShape2D_c1e6u")

[node name="arrow sensor2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_7e1w7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="arrow sensor2"]
position = Vector2(10, -4.5)
shape = SubResource("RectangleShape2D_7r22n")

[node name="Label" type="Label" parent="."]
offset_left = -289.0
offset_top = -376.0
offset_right = 355.0
offset_bottom = -251.0
theme_override_font_sizes/font_size = 64
text = "Health:"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="arrow sensor2" to="." method="_on_arrow_sensor_2_area_entered"]
